# mlops_template

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_GUIDE.md  DEPLOYMENT_ARTIFACTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  SETUP_SUMMARY.md  USER_GUIDE.md  bandit-report.json  code_checks.sh  design.md  docker-compose.yml  docs_review_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap.md  start_api.sh  tasks.md  test_deployment_locally.sh
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  drift-monitoring.yml  mlops_pipeline.yml  model-retrain.yml
configs/: serving_config.yaml  training_config.yaml
data/: .gitignore  processing_config.json  selected_features.json  training_summary.json
docs/: DEPLOYMENT_MECHANICS.md  README.md  architecture.md  improvement_plan.md
docs/deployment/: legacy-guide.md  overview.md  setup-guide.md  troubleshooting.md  workflow-changes.md
docs/en/: CHANGELOG.md  DEPLOYMENT_MECHANICS.md  README.md  SETUP_SUMMARY.md  overview.md
docs/en/deployment/: artifacts-strategy.md  overview.md  setup-guide.md  workflow-changes.md
docs/en/getting-started/: requirements.md  user-guide.md
docs/es/: CHANGELOG.md  DEPLOYMENT_MECHANICS.md  README.md  SETUP_SUMMARY.md  architecture.md  overview.md
docs/es/api/: guide.md
docs/es/deployment/: artifacts-strategy.md  legacy-guide.md  overview.md  setup-guide.md  troubleshooting.md  workflow-changes.md
docs/es/getting-started/: quick-start.md  requirements.md  user-guide.md
docs/getting-started/: quick-start.md
docs/transcripts/: 01_data_preparation.md  02_feature_engineering.md  03_model_training.md  04_model_inference.md  05_drift_detection.md  APPENDIX_minimal_serving.md
models/: random_forest_final_model.joblib
notebooks/: 01_data_preparation.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_model_inference.ipynb  05_drift_detection.ipynb
notebooks/data/: selected_features.json  training_summary.json
scripts/: init_digitalocean_apps.sh  minimal_serve.py  run_data_pipeline.py  run_full_pipeline.py  run_training.py  serve_model.py  validate_deployment.py
src/: __init__.py  config.py  data_generation.py  data_processing.py  drift_detection.py  features.py  inference.py  train.py
src/monitoring/: dashboard.py
src/pipelines/: __init__.py  data_pipeline.py  training_pipeline.py
src/serving/: README.md  README_es.md  main.py  test_api.py
tests/: __init__.py  test_config.py  test_data_processor_io.py  test_drift_detection.py  test_feature_engineering.py  test_feature_parity.py  test_inference.py  test_pipelines.py  test_training.py  test_training_pipeline.py
