[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-fraud-detection"
version = "1.0.0"
description = "End-to-end MLOps pipeline for fraud detection demonstrating best practices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MLOps Template Contributors", email = "iamdgarcia@users.noreply.github.com"}
]
keywords = ["mlops", "fraud-detection", "machine-learning", "mlflow", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas~=1.5.0",
    "numpy~=1.24.0",
    "scikit-learn~=1.3.0",
    "xgboost~=2.0.0",
    "mlflow~=2.7.0",
    "fastapi~=0.100.0",
    "uvicorn[standard]~=0.23.0",
    "pydantic~=2.0.0",
    "pyyaml~=6.0",
    "python-multipart~=0.0.6",
    "requests~=2.31.0",
    "httpx~=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.2",
    "pytest-cov~=7.0.0",
    "black~=25.11.0",
    "flake8~=7.3.0",
    "isort~=6.1.0",
    "pre-commit~=3.3.0",
]
notebooks = [
    "jupyter~=1.0.0",
    "ipykernel~=6.25.0",
    "matplotlib~=3.7.0",
    "seaborn~=0.12.0",
    "plotly~=5.15.0",
]
monitoring = [
    "prometheus-client~=0.17.0",
]
all = [
    "mlops-fraud-detection[dev,notebooks,monitoring]",
]

[project.urls]
Homepage = "https://github.com/iamdgarcia/mlops_template"
Repository = "https://github.com/iamdgarcia/mlops_template"
Documentation = "https://github.com/iamdgarcia/mlops_template/blob/master/README.md"
"Bug Tracker" = "https://github.com/iamdgarcia/mlops_template/issues"

[project.scripts]
fraud-api = "src.serving.main:main"
fraud-train = "src.pipelines.training_pipeline:main"
fraud-pipeline = "scripts.run_full_pipeline:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.yaml", "**/*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/notebooks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
